<resources>
    <string name="app_name">ImgSearch</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_prompt">Enter your search query</string>
    <string name="search">Search</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="image_size">Image Size</string>
    <string name="title_activity_settings">Search Settings</string>
    <string name="color_filter">Color Filter</string>
    <string name="image_type">Type</string>
    <string name="site">Site</string>
    <string name="saved">Saved</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="no_network">Network not available</string>
    <string name="no_data">No result for your query</string>
    <string name="share_fail">Sharing failed</string>
</resources>
